card border fix in dark mode

--- a/src/scss/layout/_dark.scss
+++ b/src/scss/layout/_dark.scss
@@ -73,10 +73,6 @@ body:not(.theme-dark) .hide-theme-light {
     background-color: $dark-mode-darken !important;
   }
 
-  .card {
-    border-color: transparent;
-  }
-
   .card-tabs .nav-tabs .nav-link {
     background-color: $dark-mode-darken;
     color: inherit;
